--- a/bweb.css
+++ b/bweb.css
@@ -12,3 +12,9 @@ body {background-color: #e8e3e3;}
 table {width: 60%; margin: 0 auto; border-collapse: collapse;}
 th {border: 2px solid #000; padding: 8px; text-align: center; font-weight: 900; font-family: 'Times New Roman', serif; font-size: 22px}
 td {border: 2px solid #000; padding: 8px; text-align: center; font-family: 'Times New Roman', serif; font-size: 18px}
+
+@media (max-width: 768px) {
+    h1 {font-size: 50px; height: 100px;}
+    ul#nav {flex-direction: column; gap: 20px; padding: 10px; top: 120px;}
+    ul#nav li {margin: 10px 0;}
+}
