--- a/bweb.css
+++ b/bweb.css
@@ -15,6 +15,6 @@ td {border: 2px solid #000; padding: 8px; text-align: center; font-family: 'Time
 
 @media (max-width: 768px) {
     h1 {font-size: 50px; height: 100px;}
-    ul#nav {flex-direction: column; gap: 20px; padding: 10px; top: 120px;}
+    ul#nav {flex-direction: column; gap: 20px; padding: 10px; top: 120px; width: 100%;}
     ul#nav li {margin: 10px 0;}
 }
